# platform

./: .gitignore  Cargo.toml  Justfile  LICENSE  example.env
migrations/: 0001_create_tables.sql
samples/: samples.sql
src/: auth.rs  bot.rs  config.rs  datastore.rs  hash.rs  main.rs  misc.rs  models.rs  repository.rs  sessions.rs  setup.sql  snowflake.rs  style.css  templates.rs  web.rs
src/api/: mod.rs  schemas.rs
src/models/: mod.rs
src/sql/: setup.sql
templates/: base.html  cart.txt  entry.html  entry.txt  help.txt  index.html  me.txt  search.txt
templates/components/: entry.html
templates/errors/: empty_cart.txt  reservation_syntax.txt  reservation_too_long.txt
