[package]
name = "tr"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "macros",
    "chrono",
] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
tera = "1.20.1"
thiserror = "2.0.18"
expiringmap = "0.1.2"
rand = "0.9.2"
base64 = "0.22.1"
